--- a/login.html
+++ b/login.html
@@ -1,5 +1,8 @@
 <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
 </fb:login-button>
 
+<fb:logout-button scope="public_profile,email" onlogin="logout();">
+</fb:logout-button>
+
 <div id="status">
 </div>
