--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
 <body ng-app="myApp">
-    <button onclick="logout">Logout</button>
+    <button onclick="logout()">Logout</button>
 <div ng-view></div>
 
 <script>
